[package]
name = "data-extractor"
version = "0.1.0"
edition = "2021"
authors = ["bkeeper.eth <bkeeper_eth@protonmail.com>"]

[dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
serde = { version = "1.0.135", features = [ "derive" ] }
reqwest = { version = "0.11.9", features = [ "blocking", "json"] }
polars = "0.20.0"
polars-core = "0.20.0"
serde_yaml = "0.8.23"
serde_json = "1.0"
clap = "3.0.0"
log4rs = "1.0"
log = "0.4.14"
chrono = "0.4.19"

conf = { path = "src/conf" }
ct_nlp = { path = "src/ct_nlp" }
