[package]
name = "honey-faucet"
version = "0.1.0"
edition = "2021"
authors = ["bkeeper.eth <bkeeper_eth@protonmail.com>"]

[dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
serde = { version = "1.0.135", features = [ "derive" ] }
reqwest = { version = "0.11.9", features = [ "blocking", "json"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
polars = "0.21.0"
polars-core = "0.21.0"
polars-io = { version = "0.21.0", features = ["parquet"] }
serde_yaml = "0.8.23"
serde_json = "1.0"
clap = "3.0.0"
log4rs = "1.0"
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde"] }
cron = "0.11.0"

conf = { path = "src/conf" }
ct_nlp = { path = "src/ct_nlp" }
base_diesel = { path = "src/base_diesel" }
